# sen0203-esp32c3-osc

./: .gitignore  Cargo.toml  README.md  cfg.toml  sdkconfig.defaults
examples/: osc_heartbeat.rs  osc_ping_pong.rs  sen0203.rs
src/: led.rs  lib.rs  main.rs  osc.rs  sen0203.rs  wifi.rs
