[package]
name = "heartbeatc3"
version = "0.1.0"
authors = ["Arne Berner <info@arneberner.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "heartbeatc3"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync", "pio"] }
anyhow = "1.0.93"
serde_json = "1.0.133"
embedded-svc = "0.28.0"
serde = "1.0.215"
rosc = "0.10.1"

[dev-dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync", "pio"] }
anyhow = "1.0.93"
serde_json = "1.0.133"
embedded-svc = "0.28.0"
serde = "1.0.215"
rosc = "0.10.1"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released

[[example]]
name = "osc_ping_pong"

[[example]]
name = "osc_heartbeat"

[[example]]
name = "sen0203"
